test/files/neg/macro-invalidusage-badargs-typemacros-c.check
Macros_Test_2.scala:8: error: too many argument lists for macro type Foo
  val x: Foo(2)(3) = 2
         ^
Macros_Test_2.scala:7: error: too many argument lists for macro type Foo
  class D extends Foo(2)(3)
                  ^
two errors found
